--- a/src/index.css
+++ b/src/index.css
@@ -71,16 +71,43 @@ main{
 }
 
 /* ingredient  */
-
-
-ul.ingredients-list {
-  margin-bottom: 48px;
+.ingredients-list-section {
+  background-color: #f9f9f9;
+  padding: 0 30px 8px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 20px auto;
 }
 
-ul.ingredients-list > li {
-  color: #475467;
-  line-height: 28px;
+.ingredients-list-section h2 {
+  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 10px;
 }
+
+.ingredients-list-section p {
+  font-size: 0.875rem;
+  margin-top: 2px;
+  color: darkgrey;
+  text-align: left;
+}
+
+.ingredients-list {
+  list-style-type: square;
+  padding: 0;
+  margin: 0;
+}
+
+.ingredients-list li {
+  color: #333;
+  padding:3px;
+  margin-bottom: 2px;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+
 
 .get-recipe-container {
   display: flex;
